add request details
