# app/admin/requests.rb
@@ -1,5 +1,5 @@
 ActiveAdmin.register Request do
-  permit_params :price, :status, :user_id, :provider_service_id
+  permit_params :price, :status, :user_id, :lat, :lng, request_details_attributes: [:id, :request_id, :provider_service_id]
 
   index do
     selectable_column
@@ -10,9 +10,6 @@ ActiveAdmin.register Request do
     column :lng
     column :user do |r|
       r.user.full_name
-    end
-    column :provider_service do |request|
-      "#{request.provider_service.name} | #{request.provider_service.provider.full_name}"
     end
     column :created_at
     actions
@@ -27,17 +24,21 @@ ActiveAdmin.register Request do
     f.inputs do
       f.input :price
       f.input :status,
-              as: :select,
-              collection: Request::STATUSES.map { |s| [s.capitalize, s]},
-              include_blank: false
+        as: :select,
+        collection: Request::STATUSES.map { |s| [s.capitalize, s]},
+        include_blank: false
       f.input :user_id,
-              as: :select,
-              collection: User.all.map{ |u| [u.full_name, u.id] },
-              include_blank: false
-      f.input :provider_service_id,
-              as: :select,
-              collection: ProviderService.all.map{ |ps| ["#{ps.name} | #{ps.provider.full_name}", ps.id] },
-              include_blank: false
+        as: :select,
+        collection: User.all.map { |u| [u.full_name, u.id] },
+        include_blank: false
+      f.inputs do
+        f.has_many :request_details do |sub_form|
+          sub_form.input :provider_service_id,
+             as: :select,
+             collection: ProviderService.all.map { |ps| ["#{ps.name} | #{ps.provider.full_name}", ps.id] },
+             include_blank: false
+        end
+      end
       f.input :lat
       f.input :lng
     end
