# db/migrate/20220612161853_remove_provider_service_id_from_requests.rb
@@ -1,0 +1,5 @@
+class RemoveProviderServiceIdFromRequests < ActiveRecord::Migration[6.1]
+  def change
+    remove_column :requests, :provider_service_id
+  end
+end
