# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2022_05_28_162116) do
+ActiveRecord::Schema.define(version: 2022_06_12_162123) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -64,11 +64,17 @@ ActiveRecord::Schema.define(version: 2022_05_28_162116) do
     t.decimal "lng", precision: 10, scale: 6
   end
 
+  create_table "request_details", force: :cascade do |t|
+    t.integer "request_id"
+    t.integer "provider_service_id"
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+  end
+
   create_table "requests", force: :cascade do |t|
     t.float "price"
     t.string "status"
     t.integer "user_id"
-    t.integer "provider_service_id"
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
     t.decimal "lat", precision: 10, scale: 6
